--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
 	<uses-permission android:name="android.Manifest.permission.ACCESS_FINE_LOCATION" />
 
 
+	<uses-permission android:name="android.permission.BLUETOOTH_PRIVILEGED" />
+
 	<application
 			android:name=".Application.AppController"
 			android:allowBackup="true"
